PROTON-2211: fix fd leak on connections in new epoll proactor implementation